# InsuLearner

./: .env.test.example  .gitignore  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml  pytest.ini
.github/workflows/: live-tests.yml  tests.yml
InsuLearner/: __init__.py  carbohydrate_sensitivity_factor.py  insulearner.py  synthetic_aggregated_dataset.csv  util.py  visualize_user_data.py
InsuLearner/nightscout/: __init__.py  nightscout_api.py  nightscout_user_model.py
InsuLearner/tidepool/: tidepool_api.py  tidepool_user_model.py
tests/: conftest.py  test_api_clients.py  test_cli_smoke.py  test_fake_dataset.py  test_model_stability.py  test_packaging_metadata.py  test_tidepool_nightscout_parity.py  test_window_and_parsing.py
