[tool.poetry]
name = "insulearner"
version = "0.1.2"
description = ""
authors = ["Cameron Summers <contact@cameronsummers.com>"]
readme = "README.md"

[tool.poetry.scripts]
insulearner = "InsuLearner.insulearner:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[tool.poetry.group.dev.dependencies]
matplotlib = "3.2.1"
numpy = "^1.24.2"
pandas = "^2.0.0"
pytest = "^7.2.2"
requests = "^2.28.2"
seaborn = "^0.12.2"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
